// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileGallery Component handles delete without datatestid 1`] = `
<div>
  <div
    class="container error"
  >
    <div
      class="left"
    >
      <div
        class="paperclipIcon"
      >
        <i
          class="icon"
          icon="fal,exclamation-triangle"
        />
      </div>
      <div
        class="name"
        tabindex="-1"
      >
        NAME
      </div>
    </div>
    <div
      class="right"
    >
      <button
        class="button deleteIcon"
        color="reversed"
        tabindex="0"
        type="button"
      >
        <div
          class="icon"
        >
          <i
            class="icon"
            icon="fal,trash-alt"
          />
        </div>
      </button>
      <div>
        Delete
      </div>
    </div>
  </div>
  <div>
    ERROR
  </div>
</div>
`;

exports[`FileGallery Component handles delete without datatestid 2`] = `
<div>
  <div
    class="container error"
  >
    <div
      class="left"
    >
      <div
        class="paperclipIcon"
      >
        <i
          class="icon"
          icon="fal,exclamation-triangle"
        />
      </div>
      <div
        class="name"
        tabindex="-1"
      >
        NAME
      </div>
    </div>
    <div
      class="right"
    >
      <button
        aria-describedby="tippy-5"
        class="button deleteIcon"
        color="reversed"
        tabindex="0"
        type="button"
      >
        <div
          class="icon"
        >
          <i
            class="icon"
            icon="fal,trash-alt"
          />
        </div>
      </button>
      <div>
        Delete
      </div>
    </div>
  </div>
  <div>
    ERROR
  </div>
</div>
`;

exports[`FileGallery Component handles download without datatestid 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="left"
    >
      <div
        class="paperclipIcon"
      >
        <i
          class="icon"
          icon="fal,paperclip"
        />
      </div>
      <div
        class="name downloadable"
        tabindex="0"
      >
        NAME
      </div>
    </div>
    <div
      class="right"
    >
      <button
        class="button deleteIcon"
        color="reversed"
        tabindex="0"
        type="button"
      >
        <div
          class="icon"
        >
          <i
            class="icon"
            icon="fal,trash-alt"
          />
        </div>
      </button>
      <div>
        Delete
      </div>
      <div>
        <div>
          ControlledMenu
          closed
          <div
            class="container"
          >
            <div
              class="title"
            >
              Delete?
            </div>
            <div
              class="buttons"
            >
              <button
                class="button"
                color="secondary"
                tabindex="0"
                type="button"
              >
                <div
                  class="label"
                >
                  Cancel
                </div>
              </button>
              <button
                class="button"
                color="primary"
                tabindex="0"
                type="button"
              >
                <div
                  class="label"
                >
                  Confirm
                </div>
              </button>
            </div>
          </div>
          has ref
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileGallery Component handles uploading state without datatestid 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="left"
    >
      <div
        class="paperclipIcon"
      >
        <i
          class="icon"
          icon="fal,paperclip"
        />
      </div>
      <div
        class="name downloadable"
        tabindex="0"
      >
        NAME
      </div>
    </div>
    <div
      class="right"
    >
      <svg
        aria-hidden="true"
        class="icon size-1x spinnerIcon"
        focusable="false"
        height="50"
        icon="fal,spinner"
        preserveAspectRatio="xMidYMid"
        role="img"
        style="background: transparent;"
        viewBox="0 0 100 100"
        width="50"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="50"
          cy="50"
          fill="transparent"
          r="30"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="10"
        >
          <animatetransform
            attributeName="transform"
            dur="2s"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="rotate"
            values="0 50 50;180 50 50;720 50 50"
          />
          <animate
            attributeName="stroke-dasharray"
            dur="2s"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            values="20 150; 150 20; 20 150"
          />
        </circle>
      </svg>
    </div>
  </div>
</div>
`;

exports[`FileGallery Component renders and handles delete of error files 1`] = `
<div>
  <div
    class="container error"
  >
    <div
      class="left"
    >
      <div
        class="paperclipIcon"
      >
        <i
          class="icon"
          icon="fal,exclamation-triangle"
        />
      </div>
      <div
        class="name"
        data-testid="TEST-ID-download"
        tabindex="-1"
      >
        NAME
         (1.21 kB)
      </div>
    </div>
    <div
      class="right"
    >
      <button
        class="button deleteIcon"
        color="reversed"
        data-testid="TEST-ID-delete"
        tabindex="0"
        type="button"
      >
        <div
          class="icon"
        >
          <i
            class="icon"
            icon="fal,trash-alt"
          />
        </div>
      </button>
      <div>
        Delete
      </div>
    </div>
  </div>
  <div>
    ERROR
  </div>
</div>
`;

exports[`FileGallery Component renders and handles delete of uploading files 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="left"
    >
      <div
        class="paperclipIcon"
      >
        <i
          class="icon"
          icon="fal,paperclip"
        />
      </div>
      <div
        class="name downloadable"
        data-testid="TEST-ID-download"
        tabindex="0"
      >
        NAME
      </div>
    </div>
    <div
      class="right"
    >
      <progress
        class="progress"
        max="100"
        value="50"
      />
      <svg
        aria-hidden="true"
        class="icon size-1x spinnerIcon"
        data-testid="TEST-ID-spinner"
        focusable="false"
        height="50"
        icon="fal,spinner"
        preserveAspectRatio="xMidYMid"
        role="img"
        style="background: transparent;"
        viewBox="0 0 100 100"
        width="50"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="50"
          cy="50"
          fill="transparent"
          r="30"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="10"
        >
          <animatetransform
            attributeName="transform"
            dur="2s"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="rotate"
            values="0 50 50;180 50 50;720 50 50"
          />
          <animate
            attributeName="stroke-dasharray"
            dur="2s"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            values="20 150; 150 20; 20 150"
          />
        </circle>
      </svg>
    </div>
  </div>
</div>
`;

exports[`FileGallery Component renders and handles download and delete of done files 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="left"
    >
      <div
        class="paperclipIcon"
      >
        <i
          class="icon"
          icon="fal,paperclip"
        />
      </div>
      <div
        class="name downloadable"
        data-testid="TEST-ID-download"
        tabindex="0"
      >
        NAME
      </div>
    </div>
    <div
      class="right"
    >
      <button
        class="button deleteIcon"
        color="reversed"
        data-testid="TEST-ID-delete"
        tabindex="0"
        type="button"
      >
        <div
          class="icon"
        >
          <i
            class="icon"
            icon="fal,trash-alt"
          />
        </div>
      </button>
      <div>
        Delete
      </div>
      <div>
        <div>
          ControlledMenu
          closed
          <div
            class="container"
          >
            <div
              class="title"
            >
              Delete?
            </div>
            <div
              class="buttons"
            >
              <button
                class="button"
                color="secondary"
                data-testid="TEST-ID-cancel"
                tabindex="0"
                type="button"
              >
                <div
                  class="label"
                >
                  Cancel
                </div>
              </button>
              <button
                class="button"
                color="primary"
                data-testid="TEST-ID-confirm"
                tabindex="0"
                type="button"
              >
                <div
                  class="label"
                >
                  Confirm
                </div>
              </button>
            </div>
          </div>
          has ref
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileGallery Component renders disabled deleting file 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="left"
    >
      <div
        class="paperclipIcon"
      >
        <i
          class="icon"
          icon="fal,paperclip"
        />
      </div>
      <div
        class="name"
        data-testid="TEST-ID-download"
        tabindex="-1"
      >
        NAME
      </div>
    </div>
    <div
      class="right"
    />
  </div>
</div>
`;

exports[`FileGallery Component renders readonly of uploading file 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="left"
    >
      <div
        class="paperclipIcon"
      >
        <i
          class="icon"
          icon="fal,paperclip"
        />
      </div>
      <div
        class="name downloadable"
        data-testid="TEST-ID-download"
        tabindex="0"
      >
        NAME
      </div>
    </div>
    <div
      class="right"
    >
      <progress
        class="progress"
        max="100"
        value="50"
      />
    </div>
  </div>
</div>
`;
